ingesting data sets

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8795c297",
+   "id": "807e2441",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0ba58b63",
+   "id": "520d5403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1d510268",
+   "id": "dfefe837",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c68b7c75",
+   "id": "c3d8cde1",
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a1d5a9d4",
+   "id": "caae4b0b",
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "28a52d4b",
+   "id": "e84d3843",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "954c530a",
+   "id": "5862297e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1329,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c0b1e4da",
+   "id": "e6353019",
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8a0f74cd",
+   "id": "c03c29b4",
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "771c5a85",
+   "id": "82846f93",
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b11f6d87",
+   "id": "cd1ac1fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,8 +1401,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "03c9c343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ems_19_last_df = pd.read_csv(\"wk7-data/ems_2019_last_6_months.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "90e7b1d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ems_20_first_df = pd.read_csv(\"wk7-data/ems_2020_first_6_months.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4501f472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ems_20_last_df = pd.read_csv(\"wk7-data/ems_2020_last_6_months.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "69514029",
+   "id": "d4d43a5b",
    "metadata": {},
    "outputs": [],
    "source": []
